fix: social buttons alignment

--- a/components/SocialLinks/SocialLinks.module.scss
+++ b/components/SocialLinks/SocialLinks.module.scss
@@ -11,6 +11,7 @@
     color: var(--color-grey-100);
     border-radius: 1rem;
     padding: var(--space-2xs);
+    line-height: 1;
 
     &_icon {
         font-size: var(--step-4);
